@@ -12,6 +12,9 @@ dependencies {
     implementation(projects.bili)
 }
 
+kotlin {
+    jvmToolchain(BuildVersionConfig.KOTLIN.toInt())
+}
 
 compose.desktop {
     application {
@@ -36,9 +39,29 @@ compose.desktop {
                 outputBaseDir.set(project.file("windows"))
             }
         }
+
+
+        buildTypes.release.proguard {
+            isEnabled.set(true)
+            version = "7.8.1"
+            optimize.set(true)
+            obfuscate.set(false)
+            this.configurationFiles.from(file("proguard-desktop.pro"))
+        }
+
     }
 }
+afterEvaluate {
+    tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
 
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        }
+    }
+}
 tasks.withType<JavaExec> {
     systemProperty("compose.application.resources.dir", file("appResources").absolutePath)
 }
